# seamd

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  dev-log.md  mvp-scope.md  mvp.md  ui-flow.md  vision.md
llm/: context.md  tasks.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: markdown.ts  tauri.ts  types.ts
