[package]
name = "seamd"
version = "0.1.0"
description = "Minimal read-first Markdown desktop reader"
authors = ["Seamd"]
edition = "2021"

[lib]
name = "seamd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

